One line regression fix for bug 79900. the fix for 80505 caused this. Change from a QI to a GetAccessible() call on content nodes. r=dr@netscape.com sr=scc@mozilla.org